@@ -1,6 +1,7 @@
 === Version 0.8.3
 * Enhancements
   * Updated to use the latest selenium-webdriver 2.29
+  * Added :using_params parameter to both on_page and if_page methods
 * Fixes
   * Fixed issue where has_expected_title? displays misleading error message (X Zhang)
   * Fixed issue when getting basic Element element when using Selenium
